--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="/css/rrssb.css">
 
   <script src="/scripts/jquery.js"></script>
-  <link rel="canonical" href="http://127.0.0.1:4000" />
+  <link rel="canonical" href="https://cheburum.github.io/homepage" />
 </head>
 <body>
   <article>
