--- a/404.html
+++ b/404.html
@@ -6,13 +6,13 @@
   <meta name="description" content="Ну тут всякое че я делаю.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>хомяк егора</title>
-  <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/solo.css">
-  <link rel="stylesheet" href="/css/syntax.css">
+  <link rel="stylesheet" href="https://cheburum.github.io/homepage/css/normalize.css">
+  <link rel="stylesheet" href="https://cheburum.github.io/homepage/css/solo.css">
+  <link rel="stylesheet" href="https://cheburum.github.io/homepage/css/syntax.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/css/rrssb.css">
+  <link rel="stylesheet" href="https://cheburum.github.io/homepage/css/rrssb.css">
 
-  <script src="/scripts/jquery.js"></script>
+  <script src="https://cheburum.github.io/homepage/scripts/jquery.js"></script>
   <link rel="canonical" href="https://cheburum.github.io/homepage" />
 </head>
 <body>
@@ -25,6 +25,6 @@ Page Not Found.
 
     </div>
   </article>
-<script src="/scripts/rrssb.min.js"></script>
+<script src="https://cheburum.github.io/homepage/scripts/rrssb.min.js"></script>
 </body>
 </html>
